# curly-disco

./: .gitignore  Dockerfile  README.md  dockerfile  pyproject.toml
.github/workflows/: build.yaml
curly-disco/: bot.py  cex.py  db.py  initdb.py  main.py  models.py  settings.py  watcher.py
curly-disco/pages/: trades_view.py
curly-disco/utils/: logger.py
curly-disco/views/: asset.py  command.py  command_view.py  market.py  orders.py  settings.py  slots.py
tests/: mini_spy.py  mini_trade.py  sandbox.py  sandbox2.py  test_binance.py  test_bot.py
