[tool.poetry]
name = "curly-disco"
version = "0.1.0"
description = ""
authors = ["Eric SCHÄFER <schafer490@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^2.7.0"
binance-connector = "^3.9.0"
tortoise-orm = "^0.22.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "curly-disco"
