[project]
name = "curly-disco"
version = "0.4.0"
description = ""
authors = [{ name = "Eric SCHÄFER", email = "schafer490@gmail.com" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "nicegui>=2.10.1,<3",
    "binance-connector>=3.12.0,<4",
    "tortoise-orm>=0.22.1,<0.23",
    "plotly>=5.24.1,<6",
    "fastapi-utilities>=0.3.0,<0.4",
]

[dependency-groups]
dev = ["ruff>=0.8.0,<0.9", "pytest>=8.3.3,<9", "pyinstaller>=6.11.1,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "curly-disco"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["curly_disco"]
